--- a/src/main/resources/GuiV1.fxml
+++ b/src/main/resources/GuiV1.fxml
@@ -52,7 +52,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="493.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="493.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.GameController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -101,7 +101,7 @@
                      <children>
                         <HBox prefHeight="49.0" prefWidth="248.0">
                            <children>
-                              <Button mnemonicParsing="false" prefHeight="49.0" prefWidth="150.0" text="Name and description" />
+                              <Button fx:id="P1_btn" mnemonicParsing="false" onAction="#test" prefHeight="49.0" prefWidth="150.0" text="Test" />
                               <VBox prefHeight="49.0" prefWidth="131.0">
                                  <children>
                                     <Label prefHeight="59.0" prefWidth="124.0" text="Gain/Click" />
