--- a/src/main/resources/GuiV1.fxml
+++ b/src/main/resources/GuiV1.fxml
@@ -102,7 +102,7 @@
                      <children>
                         <HBox prefHeight="49.0" prefWidth="248.0">
                            <children>
-                              <Button fx:id="P2_btn" mnemonicParsing="false" onAction="#producerBuy" prefHeight="49.0" prefWidth="150.0" text="Name and description" />
+                              <Button fx:id="P2_btn" mnemonicParsing="false" onAction="#producerBuyHandler" prefHeight="49.0" prefWidth="150.0" text="Name and description" />
                               <VBox fx:id="P2_display" prefHeight="49.0" prefWidth="131.0">
                                  <children>
                                     <HBox prefHeight="100.0" prefWidth="200.0">
@@ -134,7 +134,7 @@
                      <children>
                         <HBox prefHeight="49.0" prefWidth="248.0">
                            <children>
-                              <Button fx:id="P3_btn" mnemonicParsing="false" onAction="#producerBuy" prefHeight="49.0" prefWidth="150.0" text="Name and description" />
+                              <Button fx:id="P3_btn" mnemonicParsing="false" onAction="#producerBuyHandler" prefHeight="49.0" prefWidth="150.0" text="Name and description" />
                               <VBox fx:id="P3_display" prefHeight="49.0" prefWidth="131.0">
                                  <children>
                                     <HBox prefHeight="100.0" prefWidth="200.0">
@@ -166,7 +166,7 @@
                      <children>
                         <HBox prefHeight="49.0" prefWidth="248.0">
                            <children>
-                              <Button fx:id="P4_btn" mnemonicParsing="false" onAction="#producerBuy" prefHeight="49.0" prefWidth="150.0" text="Name and description" />
+                              <Button fx:id="P4_btn" mnemonicParsing="false" onAction="#producerBuyHandler" prefHeight="49.0" prefWidth="150.0" text="Name and description" />
                               <VBox fx:id="P3_display1" prefHeight="49.0" prefWidth="131.0">
                                  <children>
                                     <HBox prefHeight="100.0" prefWidth="200.0">
@@ -198,7 +198,7 @@
                      <children>
                         <HBox prefHeight="49.0" prefWidth="248.0">
                            <children>
-                              <Button fx:id="P5_btn" mnemonicParsing="false" onAction="#producerBuy" prefHeight="49.0" prefWidth="150.0" text="Name and description" />
+                              <Button fx:id="P5_btn" mnemonicParsing="false" onAction="#producerBuyHandler" prefHeight="49.0" prefWidth="150.0" text="Name and description" />
                               <VBox fx:id="P3_display2" prefHeight="49.0" prefWidth="131.0">
                                  <children>
                                     <HBox prefHeight="100.0" prefWidth="200.0">
@@ -230,7 +230,7 @@
                      <children>
                         <HBox prefHeight="49.0" prefWidth="248.0">
                            <children>
-                              <Button fx:id="P6_btn" mnemonicParsing="false" onAction="#producerBuy" prefHeight="49.0" prefWidth="150.0" text="Name and description" />
+                              <Button fx:id="P6_btn" mnemonicParsing="false" onAction="#producerBuyHandler" prefHeight="49.0" prefWidth="150.0" text="Name and description" />
                               <VBox fx:id="P3_display3" prefHeight="49.0" prefWidth="131.0">
                                  <children>
                                     <HBox prefHeight="100.0" prefWidth="200.0">
