--- a/src/main/resources/GuiV1.fxml
+++ b/src/main/resources/GuiV1.fxml
@@ -295,10 +295,10 @@
                   </HBox>
                   <HBox prefHeight="0.0" prefWidth="245.0">
                      <children>
-                        <Button fx:id="buy_1x" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="1x" />
-                        <Button fx:id="buy_10x" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="10x" />
-                        <Button fx:id="buy_100x" mnemonicParsing="false" prefHeight="25.0" prefWidth="62.0" text="100x" />
-                        <Button fx:id="buy_max" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="MAX" />
+                        <Button fx:id="buy_1x" mnemonicParsing="false" onAction="#changeBuyModeto1x" prefHeight="25.0" prefWidth="52.0" text="1x" />
+                        <Button fx:id="buy_10x" mnemonicParsing="false" onAction="#changeBuyModeto10x" prefHeight="25.0" prefWidth="70.0" text="10x" />
+                        <Button fx:id="buy_100x" mnemonicParsing="false" onAction="#changeBuyModeto100x" prefHeight="25.0" prefWidth="62.0" text="100x" />
+                        <Button fx:id="buy_max" mnemonicParsing="false" onAction="#changeBuyModetoMAX" prefHeight="25.0" prefWidth="64.0" text="MAX" />
                      </children>
                   </HBox>
                   <TabPane fx:id="u" prefHeight="303.0" prefWidth="245.0" tabClosingPolicy="UNAVAILABLE">
