--- a/src/main/resources/GuiV1.fxml
+++ b/src/main/resources/GuiV1.fxml
@@ -43,6 +43,7 @@
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -308,6 +309,7 @@
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
                                     <ImageView fitHeight="259.0" fitWidth="248.0" pickOnBounds="true" preserveRatio="true" />
+                                    <ToggleButton layoutX="199.0" layoutY="235.0" mnemonicParsing="false" text="Mute" onAction="#musicMute"  />
                                  </children></AnchorPane>
                         </content>
                       </Tab>
